--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,7 @@
 [tox]
-envlist = py27
+envlist = py27,py32
 
 [testenv]
 sitepackages=True
 deps=pytest
 commands=py.test []
-
-[testenv:py31]
-deps=
-    pytest
-    hg+https://bitbucket.org/liZe/pystacia
