parse the good loop data

--- a/tox.ini
+++ b/tox.ini
@@ -3,5 +3,7 @@ envlist = py26,py27,py32
 
 [testenv]
 sitepackages=True
-deps=pytest
+deps=
+    pytest
+    git+https://SalemHarrache@github.com/SalemHarrache/PyLink.git
 commands=py.test []
