--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,5 @@ envlist = py26,py27,py32
 
 [testenv]
 sitepackages=True
-deps=
-    pytest
-    git+https://SalemHarrache@github.com/SalemHarrache/PyLink.git
+deps=pytest
 commands=py.test []
