--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,12 @@
 [build_sphinx]
 source-dir = docs
-build-dir  = docs/_build
-#all_files  = 1
+build-dir = docs/_build
 
-[upload_sphinx] # Sphinx-PyPI-upload
+[upload_sphinx]
 upload-dir = docs/_build/html
+
+[egg_info]
+tag_build = 
+tag_date = 0
+tag_svn_revision = 0
+
